--- a/2.html
+++ b/2.html
@@ -16,16 +16,16 @@
   <br>
   <h2>We deal with many <strong><u>Topics.</u></strong></h2>
   <p>
-  <img <script src="Wallpapers.jpg" width="20%"><br>
+  <img <script src="wallpapers.jpg" width="20%"><br>
   <h3><a href="https://unsplash.com/t/wallpapers" target="_blank" title="Wallpapers">Wallpapers</a></h1></h3>
   <img <script src="travel.jpg" width="20%"><br>
   <h3><a href="https://unsplash.com/t/travel" target="_blank" title="Wallpapers">Travel</a></h1></h3>
-  <img <script src="Nature.jpg" width="20%"><br>
+  <img <script src="nature.jpg" width="20%"><br>
   <h3><a href="https://unsplash.com/t/nature" target="_blank" title="Wallpapers">Nature</a></h1></h3>
   <img <script src="texture.jpg" width="20%"><br>
   <h3><a href="https://unsplash.com/t/textures-patterns" target="_blank" title="Wallpapers">Textures & Patterns</a></h1></h3>
   <img <script src="event.jpg" width="20%"><br>
-  <h3><a href="https://unsplash.com/t/currentevents" target="_blank" title="Wallpapers">Current Events</a></h1></h3>
+  <h3><a href="https://unsplash.com/t/current-events" target="_blank" title="Wallpapers">Current Events</a></h1></h3>
   <img <script src="people.jpg" width="20%"><br>
   <h3><a href="https://unsplash.com/t/people" target="_blank" title="Wallpapers">People</a></h1></h3>
   </p>
