--- a/1.html
+++ b/1.html
@@ -3,18 +3,20 @@
 <head>
   <title>web_practice</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">Unsplash</a></h1>
-  <ul>
-    <li><a href="1.html">Main</a></li>
-    <li><a href="2.html">Topics</a></li>
-    <li><a href="3.html">Explore</a></li>
-  </ul>
-  <br>
-  <br>
-  <br>
-  <h1>I'm <a href="https://unsplash.com/" target="_blank" title="unsplash.com">Unsplash</a>.</h1>
-  <br>
-  <img <script src="coding.jpg" width="100%"> <h1>Yes, It`s me.</h1>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">Main</a></li>
+      <li><a href="2.html">Topics</a></li>
+      <li><a href="3.html">Explore</a></li>
+    </ol>
+    <div id="article">
+      <h2>I'm <a href="https://unsplash.com/" target="_blank" title="unsplash.com">Unsplash</a>.
+      <br>Yes, It`s me.</h2>
+      <img <script src="coding.jpg" width="100%">
+    </div>
+  </div>
 </body>
