--- a/2.html
+++ b/2.html
@@ -3,30 +3,32 @@
 <head>
   <title>web_practice</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">Unsplash</a></h1>
-  <ul>
-    <li><a href="1.html">Main</a></li>
-    <li><a href="2.html">Topics</a></li>
-    <li><a href="3.html">Explore</a></li>
-  </ul>
-  <br>
-  <br>
-  <br>
-  <h2>We deal with many <strong><u>Topics.</u></strong></h2>
-  <p>
-  <img <script src="wallpapers.jpg" width="20%"><br>
-  <h3><a href="https://unsplash.com/t/wallpapers" target="_blank" title="Wallpapers">Wallpapers</a></h1></h3>
-  <img <script src="travel.jpg" width="20%"><br>
-  <h3><a href="https://unsplash.com/t/travel" target="_blank" title="Wallpapers">Travel</a></h1></h3>
-  <img <script src="nature.jpg" width="20%"><br>
-  <h3><a href="https://unsplash.com/t/nature" target="_blank" title="Wallpapers">Nature</a></h1></h3>
-  <img <script src="texture.jpg" width="20%"><br>
-  <h3><a href="https://unsplash.com/t/textures-patterns" target="_blank" title="Wallpapers">Textures & Patterns</a></h1></h3>
-  <img <script src="event.jpg" width="20%"><br>
-  <h3><a href="https://unsplash.com/t/current-events" target="_blank" title="Wallpapers">Current Events</a></h1></h3>
-  <img <script src="people.jpg" width="20%"><br>
-  <h3><a href="https://unsplash.com/t/people" target="_blank" title="Wallpapers">People</a></h1></h3>
-  </p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">Main</a></li>
+      <li><a href="2.html">Topics</a></li>
+      <li><a href="3.html">Explore</a></li>
+    </ol>
+    <div id="article">
+      <h2>We deal with many <strong><u>Topics.</u></strong></h2>
+      <p>
+      <img <script src="wallpapers.jpg" width="20%"><br>
+      <h3><a href="https://unsplash.com/t/wallpapers" target="_blank" title="Wallpapers">Wallpapers</a></h1></h3>
+      <img <script src="travel.jpg" width="20%"><br>
+      <h3><a href="https://unsplash.com/t/travel" target="_blank" title="Wallpapers">Travel</a></h1></h3>
+      <img <script src="nature.jpg" width="20%"><br>
+      <h3><a href="https://unsplash.com/t/nature" target="_blank" title="Wallpapers">Nature</a></h1></h3>
+      <img <script src="texture.jpg" width="20%"><br>
+      <h3><a href="https://unsplash.com/t/textures-patterns" target="_blank" title="Wallpapers">Textures & Patterns</a></h1></h3>
+      <img <script src="event.jpg" width="20%"><br>
+      <h3><a href="https://unsplash.com/t/current-events" target="_blank" title="Wallpapers">Current Events</a></h1></h3>
+      <img <script src="people.jpg" width="20%"><br>
+      <h3><a href="https://unsplash.com/t/people" target="_blank" title="Wallpapers">People</a></h1></h3>
+      </p>
+    </div>
+  </div>
 </body>
