--- a/3.html
+++ b/3.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html>
-<head>
-  <title>web_practice</title>
-  <meta charset="utf-8">
-</head>
-<body>
-  <h1><a href="index.html">Unsplash</a></h1>
-  <ul>
-    <li><a href="1.html">Main</a></li>
-    <li><a href="2.html">Topics</a></li>
-    <li><a href="3.html">Explore</a></li>
-  </ul>
-  <br>
-  <br>
-  <br>
-  <h2>Explore Unsplash Photos</h2>
-  <a href="https://unsplash.com/explore" target="_blank" title="Explore"><img <script src="explore.jpg" width="50%"></a>
-  <h3>Click this ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑</h3>
-</body>
+  <head>
+    <title>web_practice</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1><a href="index.html">Unsplash</a></h1>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">Main</a></li>
+        <li><a href="2.html">Topics</a></li>
+        <li><a href="3.html">Explore</a></li>
+      </ol>
+      <div id="article">
+        <h2>Explore Unsplash Photos</h2>
+        <h3>Click this ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓</h3>
+        <a href="https://unsplash.com/explore" target="_blank" title="Explore"><img <script src="explore.jpg" width="50%"></a>
+      </div>
+    </div>
+  </body>
+</html>
